Output similar datasets as CSV file.